--- a/src/pug/pages/registration.pug
+++ b/src/pug/pages/registration.pug
@@ -17,8 +17,8 @@ block content
 		.container
 			+header(true)
 	section.section.section-main.section-main_bg-2.section-main_flex
-		.conatainer
-			.card.card_with-padding
+		.container
+			.card.card_with-padding.card_center
 				.title Регистрация аккаунта
 				form.form
 					.wrap-element.wrap-element_margin-b-20
