--- a/src/assets/scss/modules/header.scss
+++ b/src/assets/scss/modules/header.scss
@@ -1,8 +1,8 @@
 .header {
 	background-color: $white;
 	width: 100%;
-	&_fixed {
-		position: fixed;
+	&_sticky {
+		position: sticky;
 		z-index: 1000;
 		box-shadow: $bs-2;
 	} 
@@ -16,18 +16,12 @@
 		align-items: center;
 		@media screen and (max-width: $smDesktopWidth) {
 			display: grid;
-			grid-template-columns: auto 1fr auto;
+			grid-template-columns: auto 1fr;
 			grid-template-rows: 2fr;
-		}
-		@media screen and (max-width: $tableWidth) {
-
-		}
-		@media screen and (max-width: $phoneWidth) {
-
 		}
 	}
 	.logo-block {
-		@media screen and (max-width: $tableWidth) {
+		@media screen and (max-width: $smDesktopWidth) {
 			grid-column: 1 / 3;
 			grid-row: 1 / 1;
 		}
@@ -41,6 +35,7 @@
 		@media screen and (max-width: $smDesktopWidth) {
 			grid-column: 3 / 4;
 			grid-rows: 1 / 1;
+			display: none;
 		}
 		@media screen and (max-width: $tableWidth) {
 			display: none;
@@ -52,16 +47,11 @@
 	&__nav {
 		margin-left: auto;
 		@media screen and (max-width: $smDesktopWidth) {
-			margin: auto;
-			grid-column: 1 / 4;
-			grid-row: 2 / 2;
-		}
-		@media screen and (max-width: $tableWidth) {
 			display: none;
 		}
 		@media screen and (max-width: $phoneWidth) {
-			grid-column: 1 / 3;
-			grid-row: 2 / 2;
+			// grid-column: 1 / 3;
+			// grid-row: 2 / 2;
 		}
 	}
 
@@ -131,7 +121,7 @@
 				width: 20px;
 			}
 		}
-		@media screen and (max-width: $tableWidth) {
+		@media screen and (max-width: $smDesktopWidth) {
 			display: block;
 		}
 		@media screen and (max-width: $phoneWidth) {
@@ -179,7 +169,7 @@
 		overflow: hidden;
 		transition: $trFast;
 		display: none;
-		@media screen and (max-width: $tableWidth) {
+		@media screen and (max-width: $smDesktopWidth) {
 			display: block;
 		}
 		&_active {
