--- a/src/assets/scss/modules/swiper.scss
+++ b/src/assets/scss/modules/swiper.scss
@@ -11,11 +11,12 @@
 	opacity: 1;
 	background: none;
 	border: 1px solid $white;
-
+	box-shadow: 0px 5px 5px rgba(31, 32, 65, 0.1);
 }
 .swiper-pagination-bullet-active {
 	background: $white;
 	border: 1px solid $white;
+	box-shadow: 0px 5px 5px rgba(31, 32, 65, 0.3);
 }
 
 .swiper-button-next, .swiper-button-prev, .swiper-button-disabled {
