--- a/src/pug/pages/search-room.pug
+++ b/src/pug/pages/search-room.pug
@@ -13,72 +13,32 @@ include ../includes/modules/like-dislike.pug
 include ../includes/modules/range-slider.pug
 
 block content
-	header.header.header_bs
+	header.header.header_bs.header_sticky
 		.container
 			+header(true)
 	section.section.section-search
+		.section-saerch__form-wrapper
+			+search-form('section-search__form_fixed')
 		.container
 			.section-search__inner-wrapp
-				form.section-search__form
-					.wrap-element.wrap-element_datepicker.wrap-element_margin-b-20
-						span.title-element Даты пребывания в отеле
-						+input("input-wrapper_w266 input-wrapper_icon-show filter-date-dropdown",
-							"text",
-							 "Дата въезда - выезда",
-							 "datepicker-here date-dropdown-2 dropdown input-wrapper__input_date-picker",
-							 "Date",
-							 "icon-dropdown expand-more",
-							 "#expand_more",
-							 "true")
-					.wrap-element.wrap-element_datepicker.wrap-element_margin-b-20
-						+dropdown-guests("гости","guests")
-					.wrap-element.wrap-element_datepicker.wrap-element_margin-b-30
-						span.title-element диапазон цен
-						+range-slider()
-						span.section-search__form-span Cтоимость за сутки пребывания в номере
-					.wrap-element.wrap-element_datepicker.wrap-element_margin-b-30
-						+checkbox("checkbox button",
-						"checkbox-wrapper_w222",
-						"",
-						"Можно курить",
-						"Можно с питомцами",
-						"Можно пригласить гостей (до 10 человек)")
-					.wrap-element.wrap-element_datepicker.wrap-element_margin-b-30
-						span.title-element.title-element_margin-b доступность
-						+checkbox-2("",
-						"checkbox-wrapper_w266 checkbox-wrapper_second",
-						"",
-						"Широкий коридор",
-						"Ширина коридоров в номере не менее 91 см.",
-						"Помощник для инвалидов",
-						"На 1 этаже вас встретит специалист  и проводит до номера.") 
-					.wrap-element.wrap-element_datepicker.wrap-element_margin-b-20
-						+dropdown-bedrooms("удобства номера",
-						"bedrooms iqdropdown_w266")
-					.wrap-element
-						+checkbox("дополнительные удобства",
-						"checkbox-wrapper_w266 checkbox-wrapper_dropdown",
-						"checkbox-wrapper__ul_dropdown",
-						"Завтрак",
-						"Письменный стол",
-						"Кроватка",
-						"Телевизор",
-						"Шампунь",
-						"Телевизор",
-						"Шампунь") 
-				.section-search__catalog
-					+card-room("assets/img/room-1.jpg")
-					+card-room("assets/img/room-1.jpg")
-					+card-room("assets/img/room-1.jpg")
-					+card-room("assets/img/room-1.jpg")
-					+card-room("assets/img/room-1.jpg")
-					+card-room("assets/img/room-1.jpg")
-					+card-room("assets/img/room-1.jpg")
-					+card-room("assets/img/room-1.jpg")
-					+card-room("assets/img/room-1.jpg")
-					+card-room("assets/img/room-1.jpg")
-					+card-room("assets/img/room-1.jpg")
-					+card-room("assets/img/room-1.jpg")
+				+search-form()
+				.section-search__catalog-wrap
+					.section-search__catalog.section-search__catalog_active
+							+card-room("assets/img/room-1.jpg")
+							+card-room("assets/img/3.jpg")
+							+card-room("assets/img/2.jpg")
+							+card-room("assets/img/4.jpg")
+							+card-room("assets/img/5.jpg")
+							+card-room("assets/img/6.jpg")
+							+card-room("assets/img/2.jpg")
+							+card-room("assets/img/7.jpg")
+							+card-room("assets/img/8.jpg")
+							+card-room("assets/img/9.jpg")
+							+card-room("assets/img/10.jpg")
+							+card-room("assets/img/12.jpg")
+					.pagination-container
+						.pagination 
+						span.pagination-text 1 – 12 из 100+ вариантов аренды
 	+footer(true)
 
 	
