--- a/src/blocks/dropdown-choose/dropdown-choose.pug
+++ b/src/blocks/dropdown-choose/dropdown-choose.pug
@@ -1,4 +1,4 @@
-mixin dropdown-choose({className})
+mixin dropdown-choose({className, title})
   label 
-    span.dropdown-choose__title Dropdown
+    span.dropdown-choose__title #{title}
     div(class=className)
