--- a/src/blocks/filter-date/filter-date.scss
+++ b/src/blocks/filter-date/filter-date.scss
@@ -1,6 +1,5 @@
-.date-dropdown {
+.filter-date {
   max-width: 320px;
-  user-select: none;
   &__title {
     text-transform: uppercase;
     font-size: rem(12);
@@ -12,14 +11,11 @@
     border-radius: rem(4);
     padding: 12px 15px;
     transition: $trFast;
-    max-width: 150px;
+    min-width: 266px;
     background-image: url('./assets/img/expand_more.jpg');
     background-repeat: no-repeat;
-    background-position-x: 90%;
+    background-position-x: 93%;
     background-position-y: 50%;
-    &:first-child {
-      margin-right: rem(20);
-    }
     &:focus {
       border: $borderHover;
     }
