--- a/src/blocks/textField/textField.pug
+++ b/src/blocks/textField/textField.pug
@@ -1,11 +1,11 @@
-mixin textField({title, type, placeholder,pattern, required})
+mixin textField({title, type, placeholder, required})
 	label.textfield
 		span.textfield__title #{title}
 		input.textfield__input(
 			type=type 
 			name=type
 			placeholder=placeholder
-			pattern=pattern 
+			pattern='[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$' 
 			required=required
 		)
 
