--- a/src/main.scss
+++ b/src/main.scss
@@ -171,6 +171,11 @@ section,
 @import './blocks/dropdown-choose/dropdown-choose';
 @import './blocks/date-dropdown/date-dropdown';
 @import './blocks/datepicker/datepicker.scss';
+@import './blocks/filter-date/filter-date.scss';
+@import './blocks/subscription/subscription.scss';
+@import './blocks/expand-list/expand-list.scss';
+@import './blocks/checkbox-buttons/checkbox-buttons.scss';
+@import './blocks/radio-buttons/radio-buttons.scss';
 // @import 'modules/ui-kit';
 // @import 'modules/title-element';
 // @import 'modules/input-wrapper';
