--- a/src/main.pug
+++ b/src/main.pug
@@ -17,7 +17,7 @@ html(lang='en')
         .content-wrapper
           block content
 
-        #icons-svg
+        #svg-icons
         //- include ../includes/modules/footer
 
     block script
