--- a/src/main.scss
+++ b/src/main.scss
@@ -176,6 +176,8 @@ section,
 @import './blocks/expand-list/expand-list.scss';
 @import './blocks/checkbox-buttons/checkbox-buttons.scss';
 @import './blocks/radio-buttons/radio-buttons.scss';
+@import './blocks/toggle-buttons/toggle-buttons.scss';
+@import './blocks/like-button/like-button.scss';
 // @import 'modules/ui-kit';
 // @import 'modules/title-element';
 // @import 'modules/input-wrapper';
