--- a/src/blocks/radio-buttons/radio-buttons.pug
+++ b/src/blocks/radio-buttons/radio-buttons.pug
@@ -1,11 +1,12 @@
 mixin radio-buttons({title}) 
   .radio-buttons
     span.radio-buttons__title #{title}
-    label
-      input(type="radio" name="radio")
-      span.radio-buttons__checkmark
-      span.radio-buttons__text Мужчина
-    label
-      input(type="radio" name="radio")
-      span.radio-buttons__checkmark
-      span.radio-buttons__text Женщина
+    .radio-buttons__inputs
+      label
+        input(type="radio" name="radio")
+        span.radio-buttons__checkmark
+        span.radio-buttons__text Мужчина
+      label
+        input(type="radio" name="radio")
+        span.radio-buttons__checkmark
+        span.radio-buttons__text Женщина
