--- a/src/blocks/like-button/like-button.scss
+++ b/src/blocks/like-button/like-button.scss
@@ -2,6 +2,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  width: 38px;
+  height: 18px;
   min-width: 38px;
   min-height: 18px;
   @include Mont;
@@ -30,7 +32,7 @@
     left: 4px;
     transition: $trFast;
   }
-  &__like-purple {
+  &__like-favorite {
     width: 10px;
     height: 10px;
     position: absolute;
@@ -50,6 +52,7 @@
       transform: rotateZ(-360deg);
       animation-duration: $trFast;
       animation-name: changeSize;
+      fill: $purple;
     }
     span {
       color: $purple;
